openmetadata-ui/src/main/resources/ui/src/styles/app.less
/* ... */
// text alignment

.text-center {
  text-align: center;
}
.text-left {
  text-align: left;
}
.text-right {
  text-align: right;
}
.text-wrap {
  text-wrap: wrap;
}

.text-underline {
  text-decoration: underline;
}

// image property

.object-contain {
  object-fit: contain;
}

// Border
.no-border {
  border: none;
}
.border {
  border: @global-border;
}
.border-1 {
  border-width: 1px;
}
.border-l {
  border-left-width: 1px;
}
.border-l-2 {
  border-left: 2px;
}
.border-t-0 {
  border-top-width: 0px;
}
.border-main {
  border-color: @border-color;
}
.border-primary {
  border-color: @primary-color;
}
.border-gray {
  border-color: @border-color;
}
.border-light-gray {
  border-color: @light-border-color;
}

.border-warning {
  border-color: @warning-color;
}

// Line height

.line-height-normal {
  line-height: normal;
}

.line-height-0 {
  line-height: 0;
}

.line-height-16 {
  line-height: 16px;
}

.line-height-22 {
  line-height: 22px;
}

// Radius

.rounded-4 {
  border-radius: @border-radius-base;
}
.rounded-full {
  border-radius: 9999px;
}

.rounded-6 {
  border-radius: 6px;
}
.rounded-12 {
  border-radius: 12px;
}

// Word break

.break-all {
  word-break: break-all;
}
.break-word {
  word-break: break-word;
}

// Whitespace

.whitespace-normal {
  white-space: normal;
}

.whitespace-pre-wrap {
  white-space: pre-wrap;
}

//  Reduce text to 2 lines
.max-two-lines {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
}

.mx-auto {
  margin-right: auto;
  margin-left: auto;
}
.bg-body-main {
  background: @body-bg-color;
}
.bg-primary-lite {
  background: @primary-1;
}
.bg-primary {
  background: @primary-color;
}
.bg-primary-hover-lite {
  background-color: @primary-1;
}
.bg-grey {
  background-color: @border-color;
}
.bg-grey-1 {
  background-color: @grey-1;
}
.bg-grey-2 {
  background-color: @grey-2;
}
.bg-grey-4 {
  background-color: @grey-4;
}
.bg-grey-5 {
  background-color: @grey-5;
}

.bg-grey-1-hover:hover {
  background-color: @grey-1;
}

.bg-white {
  background-color: @white;
}
.bg-transparent {
  background-color: transparent;
}

.activeCategory {
  border-left: 2px solid @primary-color;
  background: @primary-1;
  padding-left: 10px;
  font-weight: 600;

  .ant-typography {
    color: @primary-color;
  }
}

.shadow-custom {
  box-shadow: 1px 1px 8px rgb(0 0 0 / 6%);
}
.card-box-shadow {
  box-shadow: rgba(0, 0, 0, 0.06) 1px 1px 8px;
}
.shadow-base {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
}

.link-hover {
  &:hover {
    text-decoration: underline;
    cursor: pointer;
  }
}
.cursor-pointer {
  cursor: pointer;
}

.cursor-text {
  cursor: text;
}

.cursor-not-allowed {
  cursor: not-allowed;
}

.truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* SSO layout style  */
.sso-container {
  width: 100%;
  height: 580px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;

  span {
    margin: 0;
  }
}

.transform-180 {
  transform: rotate(180deg);
}
.transform-90 {
  transform: rotate(90deg);
}

.no-underline {
  &:hover {
    text-decoration: none;
  }
}

.z-5 {
  z-index: 5;
}
.z-10 {
  z-index: 10;
}
.z-400 {
  z-index: 400;
}

.entity-details-container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 16px;
  padding-bottom: 0;
}

.description-text {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  line-height: 18px;
}

.entity-header-display-name {
  font-weight: 700;
  font-size: 18px;
  line-height: 22px;
  color: @text-color;
  text-decoration: none !important;
}

/* Opacity CSS start */

.opacity-0 {
  opacity: 0;
}
.opacity-50 {
  opacity: 0.5;
}
.opacity-60 {
  opacity: 0.6;
}
.opacity-100 {
  opacity: 1;
}

/* Opacity CSS end */

/* Group CSS Start */

.custom-group {
  &:hover {
    .group-hover-opacity-100 {
      opacity: 1;
    }
  }
}

.hover-icon-group {
  .hover-cell-icon {
    opacity: 0;
    transition: 0.3s ease-in;
  }
  &:hover {
    .hover-cell-icon {
      opacity: 100;
    }
  }
}

/* Group CSS End*/

.quick-filter-dropdown-trigger-btn {
  padding: 4px;
  border: none;
  background: transparent;
  box-shadow: none;
}

.quick-filter-dropdown-trigger-btn:hover,
.quick-filter-dropdown-trigger-btn:focus {
  background-color: @trigger-btn-hover-bg;
}

// Rotate
.rotate-inverse {
  transform: rotate(180deg);
}

.rotate-90 {
  transform: rotate(90deg);
}

.rotate--90 {
  transform: rotate(-90deg);
}

.whitespace-nowrap {
  white-space: nowrap;
}

.service-form-container {
  margin: 16px auto 0;
  padding-bottom: 16px;
}

// breadcrumb

.breadcrumb-item {
  font-size: 12px;
  .link-title {
    font-size: inherit !important;
    color: @text-grey-muted !important;
  }
  .link-title:hover {
    color: @primary-color !important;
    text-decoration: none !important;
  }
  .link-title.inactive-link:hover {
    color: @text-grey-muted !important;
  }
}

// Multiple label in a field with required

.multiple-label-field label {
  align-items: flex-start;
}
.multiple-label-field
  .ant-form-item-label
  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
  line-height: 24px;
}

// Switch Inline Field

.switch-field .ant-form-item {
  margin: 0;
}

.common-left-panel-card-heading {
  color: @group-title-color;
  font-size: 12px;
}

.no-scrollbar {
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

// beta tag for service page
.service-beta-tag {
  sup {
    padding: 0 4px;
    margin-left: 2px;
    font-size: 10px;
  }
}

/* Tabs */
.ant-tabs-top > .ant-tabs-nav::before {
  border-color: @border-color;
}

// Entity Details Page css
.entity-details-page-tabs {
  .ant-tabs-nav {
    margin: 0 !important;
    padding: 0 20px;
  }
}
/* ... */

